[package]
name = "remove-letterbox"
version = "0.1.0"
edition = "2024"
description = "A command line tool to remove letterboxing from images using imx and xio libraries"
license = "MIT"
repository = "https://github.com/rakki194/remove-letterbox"
homepage = "https://github.com/rakki194/remove-letterbox"
documentation = "https://docs.rs/remove-letterbox"
keywords = ["image", "letterbox", "processing", "cli", "batch"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
imx = { path = "../imx", version = "0.1.1" }
xio = { path = "../xio", version = "0.1.3" }
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.30", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
log = "0.4.25"
env_logger = "0.11.6"
image = { version = "0.25.5", features = ["png"] }

[dev-dependencies]
tempfile = "3.17.1"
